kubernetes/services/base/istio/jwt-authentication-policy.yml
apiVersion: "security.istio.io/v1beta1"
kind: "RequestAuthentication"
metadata:
  name: jwt-authentication-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
    - issuer: "http://auth-service.local"
      jwksUri: "http://auth-service.sg-exam.svc.cluster.local/.well-known/jwks.json"
