kubernetes/services/base/istio/admin-service-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: admin-service-vs
spec:
  hosts:
    - "*"
  gateways:
    - sg-gateway
  http:
    - match:
        - uri:
            prefix: /admin
      rewrite:
        uri: /
      route:
        - destination:
            port:
              number: 80
            host: admin-service.sg-exam.svc.cluster.local
