kubernetes/services/base/istio/auth-service-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-service-vs
spec:
  hosts:
  - "*"
  gateways:
  - sg-gateway
  http:
  - match:
      - uri:
          prefix: /oauth
    route:
    - destination:
        port:
          number: 80
        host: auth-service.sg-exam.svc.cluster.local
