kubernetes/services/base/istio/exam-service-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: exam-service-vs
spec:
  hosts:
    - "*"
  gateways:
    - sg-gateway
  http:
    - match:
        - uri:
            prefix: /exam-service
      route:
        - destination:
            port:
              number: 80
            host: exam-service.sg-exam.svc.cluster.local
