kubernetes/services/base/istio/inrernal_mtls_destination_rules.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: auth-service-dr
spec:
  host: auth-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: user-service-dr
spec:
  host: user-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: exam-service-dr
spec:
  host: exam-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: msc-service-dr
spec:
  host: msc-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
