kubernetes/services/base/istio/msc-service-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: msc-service-vs
spec:
  hosts:
    - "*"
  gateways:
    - sg-gateway
  http:
    - match:
        - uri:
            prefix: /msc-service
      route:
        - destination:
            port:
              number: 80
            host: msc-service.sg-exam.svc.cluster.local
